--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -144,5 +144,9 @@
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js" defer="defer"></script>
+    
+    <script>
+      new Splide( '.splide' ).mount();
+    </script>
   </body>
 </html>
