add images to slider

--- a/sections/add-slider.liquid
+++ b/sections/add-slider.liquid
@@ -1,9 +1,9 @@
 <div class="splide">
 	<div class="splide__track">
 		<ul class="splide__list">
-			<li class="splide__slide">Slide 01</li>
-			<li class="splide__slide">Slide 02</li>
-			<li class="splide__slide">Slide 03</li>
+			<li class="splide__slide"><img src="https://source.unsplash.com/SPxVnxu_ZGM/800x600" alt=""></li>
+			<li class="splide__slide"><img src="https://source.unsplash.com/LoLiXKJEvgE/800x600" alt=""></li>
+			<li class="splide__slide"><img src="https://source.unsplash.com/F93PQmh4krI/800x600" alt=""></li>
 		</ul>
 	</div>
 </div>
